Refactor color utility integration
Removed custom color handling classes and updated various classes to use the new `aquaticseries` library. This simplifies color parsing and processing, enhancing maintainability and reducing boilerplate code.